src/css/sumo.scss
/* ... */
.navbar__item {
  font-size: .85rem;
}

@media (min-width: 1440px) {
  .container {
      max-width: 97%;
  }
}

.table-of-contents .table-of-contents__link {
  font-size: .75rem !important;
  display: block;
}

html[data-theme='dark'] {
  --ifm-background-color: #101827;
  --ifm-navbar-background-color: #101827;
  --collapse-button-bg-color-dark: transparent !important;
  --ifm-toc-border-color: rgba(29, 43, 69, .9);
  --ifm-code-background: #172b42;
  --ifm-dropdown-background-color: #1A253B;
  --ifm-footer-background-color: #1a273f;
  --ifm-table-stripe-background: rgba(29, 43, 69, .50);
  --ifm-table-head-background: rgba(0, 164, 219, 0.35);
  --ifm-table-border-color: rgba(59, 91, 110, 0.35);
  .button--secondary {
    --ifm-color-emphasis-200: rgba(53, 120, 229, .25);
  }
  g {
    fill: var(--ifm-color-primary);
  }
  .toggle {
    background-color: #2b4472;
  }
  .tabs__item--active {
    color: #fff;
  }
  /* Index page 'smallbox' cards/tiles */
  article .card {
    background-color: rgb(53, 120, 229, .10);
    border-color: rgba(187, 199, 218, 0.10);
    border-radius: 12px;
    h2 {
      font-size: 1.1rem !important;
    }
  }
  /* Index page 'smallbox' cards/tiles */
  article .card:hover {
    border-color: var(--ifm-pagination-nav-color-hover);
    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.6);
  }
  .docusaurus-highlight-code-line {
    background-color: rgb(46, 149, 255,.2);
  }
  pre {
    background-color: rgba(84, 84, 84, 0.4) !important;

  }
  .markdown::after {
      display: none !important;
  }
  .codeBlockTitle {
    background-color: rgba(41, 98, 155, 0.4) !important;
    border-bottom: 1px solid #2b5893;
  }
  .breadcrumbsItemLink_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocBreadcrumbs-styles-module {
    background-color: rgb(53, 120, 229, .00) !important;
    border-radius: 0px !important;
  }
}

html[data-theme='light'] {
  --ifm-background-color: #fff;
  --ifm-navbar-background-color: #fff;
  --ifm-toc-border-color: rgba(29, 43, 69, .3);
  --ifm-font-color-base: #2e2e2e;
  --ifm-footer-background-color: #1a273f;
  --ifm-menu-color: var(--ifm-font-color-base);
  --ifm-table-stripe-background: rgb(241, 244, 247);
  --ifm-table-head-background: rgba(0, 139, 178, 0.397);
  --ifm-table-border-color: rgba(25, 43, 54, 0.35);
  .button--secondary {
    --ifm-button-border-color: rgba(53, 120, 229, .25);
  }
  g {
    fill: var(--ifm-color-primary);
  }
  .navbar {
    border-bottom: 1px solid var(--ifm-toc-border-color);
  }
  .tabs__item--active {
    color: #2e2e2e;
  }
  .toggle {
    background-color: #c3e9ff;
  }
  /* Index page 'smallbox' cards/tiles */
  article .card {
    border-radius: 12px;
    border-color: rgba(118, 156, 218, 0.2);
    h2 {
      font-size: 1.1rem !important;
    }
  }
  article .card:hover {
      border-color: var(--ifm-pagination-nav-color-hover);
  }
  .theme-code-block-highlighted-line {
    background-color: var(--ifm-table-head-background);
  }
  .docusaurus-highlight-code-line {
    background-color: rgb(0, 139, 178,.1);
  }
  pre {
    background-color: rgba(242 244 245) !important;

  }
  .codeBlockTitle {
    background-color: rgba(0, 139, 178, 0.4) !important;
    border-bottom: 1px solid #0095bd;
  }
  .markdown::after {
      display: none !important;
  }
  .breadcrumbsItemLink_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocBreadcrumbs-styles-module {
    background-color: transparent !important;
    border-radius: 0px !important;
  }
}

.medium-zoom-overlay {
  background:rgba(0, 0, 0, 0.6) !important;
}

.DocSearch-Button-Placeholder {
  font-size: .85rem !important;
  min-width: 100px;
}

//GitHub icon
.header-github-link:hover {
  opacity: 0.6;
}

.header-github-link::before {
  content: '';
  width: 22px;
  height: 22px;
  margin-top: 7px;
  display: inline-flex;
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}

.header-github-link::after {
    display: none !important;
    content: none !important;
}

[data-theme='dark'] .header-github-link::before {
  background: url("data:image/svg+xml,%3Csvg viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill='white' d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E")
    no-repeat;
}
/* ... */

